# editorial-assistant

./: README.md  pyproject.toml
conf/: flyway.toml
editorial_assistant/src/backend/: postgres.py  routers.py  schema.py  service.py
migrations/: V1__Create_client_and_content_tables.sql
scripts/: run_database_migrations.sh
