[tool.poetry]
name = "editorial-assistant"
version = "0.1.0"
description = "Editorial assistant application with a FastAPI Python background and a simple Gradio frontend"
authors = ["Natalie Dunn <nataliedunn21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
gradio = "^4.22.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
asyncio = "^3.4.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
